# LabProjetos

./: Ippon.csv  README.md  Wazari.csv  main.py  pyproject.toml
config/: params.yaml
dataset/: matte-novo-novo-novo.csv  matte-novo-novo.csv  matte-novo.csv  matte.csv  scorechange-novo.csv  scorechange.csv  shido-novo.csv  shido.csv  teste.csv  toketa-novo.csv  toketa.csv  wazari-novo-novo.csv  wazari-novo.csv  wazari.csv
esp32/mpuSerialData/: mpuSerialData.ino
flask/: index.html
flask/static/: index.js  styles.css
matlab_datasets/: ippon-dataset.mat  wazari-dataset.mat
model/: lstm_model.h5  scaler.pkl
models/: model.keras  no_timestep.keras  preprocessing_pipe_model.pkl  preprocessing_pipe_no_timestep.pkl  preprocessing_pipe_primeiro.pkl  primeiro.keras
src/: cronometro.py  data_helpers.py  matlab_helpers.py  mpu_read_serial.py  train.py  train_lib.py  visualizer.py  webapp.py
timestamps/: ippon.csv  wazari.csv
